Changelog for zest.releaser
===========================

3.19 (unreleased)
-----------------

- Nothing changed yet.


3.18 (2010-12-08)
-----------------

- Added ``--non-interactive--`` option to the ``svn diff`` command used in
  lasttagdiff.  This makes it usable in cronjobs and post-commit hooks.
  Fixes https://bugs.launchpad.net/zest.releaser/+bug/687530


3.17 (2010-11-17)
-----------------

- When the package that is being released neither has a setup.py nor a
  setup.cfg, use No as default answer for creating a checkout of the
  tag.
  [maurits]


3.16 (2010-11-15)
-----------------

- For (pypi) output, also show the first few lines instead of only the
  last few.
  [maurits]

- See if pypirc or setup.cfg has a [zest.releaser] section with option
  release = yes/no.  During the release stage, this influences the
  default answer when asked if you want to make a checkout of the tag.
  The default when not set, is 'yes'.  You may want to set this to
  'no' if most of the time you only make releaser of internal packages
  for customers and only need the tag.
  [maurits]

- Specify bazaar (bzr) tag numbers using the 'tag' revision specifier
  (like 'tag:0.1') instead of only the tag number (0.1) to add
  compatibility with earlier bzr versions (tested with 2.0.2).
  [maurits]


3.15 (2010-09-10)
-----------------

- Read pypi config not only from the .pypirc file, but also from the
  setup.cfg file of the package.  Patch by Erico Andrei.
  [maurits]


3.14 (2010-08-26)
-----------------

- experimental support for git svn tagging, fully test-covered
  [chaoflow]

- fail if no tag was created, not test-covered
  [chaoflow]

- svn available_tags method: intercept 'Repository moved' note in svn
  info and stop processing then.
  [maurits]


3.13 (2010-08-16)
-----------------

- Fixed check that tested whether a package was already available on
  pypi, as the pypi implementation changed slightly.  We now just